@@ -10,6 +10,7 @@
 extern gboolean opt_null;
 extern gboolean opt_removed;
 extern gboolean opt_modified;
+extern gboolean opt_check;
 extern gint opt_verbose;
 extern char *opt_format;
 extern char qstr[];
@@ -205,7 +206,7 @@ entry_print(FILE *out, char plusmin, struct entry *e)
 		fprintf(stderr, " %s\n", e->f_name);
 	}
 	
-	if (!S_ISDIR(e->f_mode) && plusmin == '+') {
+	if (!S_ISDIR(e->f_mode) && plusmin == '+' && opt_check) {
 		/* check if the file has changed since we first
 		 * visited it. If so, skip it as it will tear
 		 * up the entire print. Esp. when also printing
